RESOLVED FIXED308808
Internal iOS builds broken due to missing WKA import
https://bugs.webkit.org/show_bug.cgi?id=308808
Summary Internal iOS builds broken due to missing WKA import
Lily Spiniolas
Reported 2026-02-27 00:58:48 PST
Attachments
Lily Spiniolas
Comment 1 2026-02-27 01:01:32 PST
EWS
Comment 2 2026-02-27 01:04:22 PST
Committed 308328@main (4c0983e07892): <https://commits.webkit.org/308328@main> Reviewed commits have been landed. Closing PR #59564 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.