Internal iOS builds broken due to missing WKA import https://bugs.webkit.org/show_bug.cgi?id=308808 rdar://171340139

Unreviewed build fix.

Include missing import.

* Source/WebKit/UIProcess/API/Cocoa/WKWebView.mm:

Canonical link: https://commits.webkit.org/308328@main